--- a/kafinalprojectfrontend/package.json
+++ b/kafinalprojectfrontend/package.json
@@ -20,13 +20,14 @@
     "@angular/router": "~12.1.0",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
-    "@angular/cli": "~12.1.4",
+    "@angular/cli": "^12.2.9",
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
